03.business-os/AICompanyManager/900.meta/server_only_pmlw_api_route_fix_20260430_171452/030_verify.txt
[PASS] index.html exists
[PASS] server file exists
[PASS] clean core exists
[PASS] clean server candidate exists
INDEX_HASH_BEFORE=1c63861413b709f9ca1c8a44be3206a40c4e6f7c1ca463c263835623ab2f02bc
SERVER_HASH_BEFORE=c57a2b54639a7a1b690b42c066acbf7ad735fcbebdc4473be9484b94d9e1f44a
CORE_HASH_BEFORE=9bbd05f6f955356072ee0dc1b1c0131dc436dd6edf503215abdea083505e52e5
[PASS] server backup created
[PASS] clean server candidate backup created
file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/server_only_pmlw_api_route_fix_20260430_171452/010_patch_server_pmlw_routes_existing_body_reader.mjs:512
    "from \\"pg\\"",
             ^^^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:99:18)
    at #translate (node:internal/modules/esm/loader:473:20)
    at afterLoad (node:internal/modules/esm/loader:529:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:534:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:577:36)
    at afterResolve (node:internal/modules/esm/loader:625:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:631:12)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:650:32)
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)

Node.js v24.14.1
SERVER_PATCH_CODE=1
[FAIL] server PMLW API patch failed; restoring server files
SERVER_NODE_CHECK_CODE=0
[PASS] server node --check OK
[PASS] clean server candidate node --check OK
SERVER_API_MARKER_COUNT=0
PRESIDENT_ROUTE_COUNT=0
MANAGER_CREATE_ROUTE_COUNT=0
MANAGER_UPDATE_ROUTE_COUNT=0
MANAGER_ARCHIVE_ROUTE_COUNT=0
MANAGER_IMPORT_ROUTE_COUNT=0
CORE_IMPORT_ENDPOINT_COUNT=1
PROHIBITED_POOL_MARKER_COUNT=0
INDEX_SCRIPT_COUNT=1
FORBIDDEN_CORE_COUNT=0
[FAIL] server PMLW API marker missing
[FAIL] President policy create route missing
[FAIL] Manager major create route missing
[FAIL] Manager major update route missing
[FAIL] Manager major archive route missing
[FAIL] Manager major CSV import route missing
[PASS] core already connects CSV import endpoint
[PASS] no new Pool / pg import marker
[PASS] production index still loads one script
[PASS] core forbidden marker count OK
INDEX_HASH_AFTER=1c63861413b709f9ca1c8a44be3206a40c4e6f7c1ca463c263835623ab2f02bc
SERVER_HASH_AFTER=c57a2b54639a7a1b690b42c066acbf7ad735fcbebdc4473be9484b94d9e1f44a
CORE_HASH_AFTER=9bbd05f6f955356072ee0dc1b1c0131dc436dd6edf503215abdea083505e52e5
[PASS] index.html unchanged
[PASS] clean core unchanged
[PASS] no old local UI server detected
SERVER_PID=26832
[PASS] production server restart attempted
CONTEXT_CURL_CODE=0
CONTEXT_HTTP_CODE=200
[PASS] context HTTP 200
[PASS] context result ok
[PASS] context includes pmlw_major_items
INDEX_CURL_CODE=0
INDEX_HTTP_CODE=200
[PASS] production index HTTP 200
